Fixing some mobile layout issues

--- a/RepeaterQTH/wwwroot/css/site.css
+++ b/RepeaterQTH/wwwroot/css/site.css
@@ -64,14 +64,24 @@ th {
         top: 0.5rem;
     }
 
+
 #repeaterMap {
     height: 400px;
     width: 400px;
-    margin-top: 30px; 
-    margin-right: 30px; 
+    margin: 30px;
     float: right
 }
 
+@media (max-width:1050px) {
+    #repeaterMap {
+        height: 400px;
+        width: 400px;
+        margin: 0;
+        margin-top: 30px;
+ 
+        float: left
+    }
+}
 #bigRepeaterMap {
     height: calc(100vh - 150px);
     width: 100%;
